apps/syncthing/overlays/nishir/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncthing
  namespace: shikanime
spec:
  template:
    spec:
      containers:
        - name: syncthing
          volumeMounts:
            - name: data-sukebe
              mountPath: /data/sukebe
            - name: data-videos
              mountPath: /data/videos
      volumes:
        - name: data-sukebe
          persistentVolumeClaim:
            claimName: sukebe
        - name: data-videos
          persistentVolumeClaim:
            claimName: videos
