apps/syncthing/overlays/nishir/svc.patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing-private
  namespace: shikanime
  annotations:
    tailscale.com/hostname: nishir-syncthing
