apps/syncthing/overlays/nishir/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: syncthing
spec:
  hostnames:
    - syncthing.taila659a.ts.net
  parentRefs:
    - name: nishir
      sectionName: https
  rules:
    - backendRefs:
        - name: syncthing
          port: 8384
