apps/syncthing/overlays/nishir/patch-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: syncthing
spec:
  hostnames:
    - syncthing.taila659a.ts.net
