apps/syncthing/overlays/nishir/patch-httpsroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: syncthing-https
spec:
  hostnames:
    - syncthing.taila659a.ts.net
