apps/syncthing/overlays/nishir/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: syncthing
spec:
  defaultBackend:
    service:
      name: syncthing
      port:
        name: https
