apps/syncthing/overlays/nishir/tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: syncthing
spec:
  parentRefs:
    - name: nishir
      sectionName: syncthing
  rules:
    - backendRefs:
        - name: syncthing
          port: 22000
